Buat layar awal dengan logo

--- a/app/src/main/res/layout/activity_database_helper.xml
+++ b/app/src/main/res/layout/activity_database_helper.xml
@@ -4,13 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".DatabaseHelper">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="266dp"
-        android:layout_height="564dp"
-        app:srcCompat="@drawable/pelangi"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="83dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
